<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_alumno_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/fragment_alumno_padding"
                android:layout_marginEnd="@dimen/fragment_alumno_padding"
                android:contentDescription="@string/nombre"
                android:src="@drawable/ic_face"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/curso"
                android:layout_marginRight="@dimen/fragment_alumno_padding"
                android:layout_marginEnd="@dimen/fragment_alumno_padding"
                android:src="@drawable/ic_create"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <es.iessaladillo.pedrojoya.pr197.utils.ClickToSelectEditText
                    android:id="@+id/txtCurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:hint="@string/curso"
                    android:inputType="none"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/telefono"
                android:layout_marginRight="@dimen/fragment_alumno_padding"
                android:layout_marginEnd="@dimen/fragment_alumno_padding"
                android:src="@drawable/ic_phone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:imeOptions="actionNext"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_alumno_marginBottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/direccion"
                android:layout_marginRight="@dimen/fragment_alumno_padding"
                android:layout_marginEnd="@dimen/fragment_alumno_padding"
                android:src="@drawable/ic_home"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionDone"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>